# mpl-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
mpl_utils/styles/: default.mplstyle
tests/: test_styles.py
